--- a/Slider/style.css
+++ b/Slider/style.css
@@ -209,4 +209,4 @@ main p {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-/* Shahboz */
+/* Shahboz End */
