--- a/Slider/style.css
+++ b/Slider/style.css
@@ -210,3 +210,128 @@ main p {
 }
 
 /* Shahboz End */
+
+
+
+/* Sardor */
+.cc {
+   justify-content: center;
+}
+
+#person {
+   width: 60px;
+   height: 60px;
+   border-radius: 50%;
+   opacity: 0.6;
+}
+
+.card-content h3 {
+   color: rgb(39, 39, 83);
+
+}
+
+.card-content {
+   height: 355px;
+   width: 540px;
+   background: rgb(255, 255, 255);
+   margin: 10px;
+   text-align: center;
+}
+
+.card-content p {
+   margin-left: 40px;
+   margin-top: 10px;
+   margin-bottom: 10px;
+
+}
+
+.star {
+   margin-top: 30px;
+   margin-bottom: 10px;
+}
+
+.caruosel {
+   margin-left: 140px;
+   margin-top: 30px;
+   margin-bottom: 30px;
+  
+}
+
+
+section {
+   background: rgb(238, 238, 238);
+   margin-bottom: 20px;
+   height: 630px;
+}
+
+.text-headerblock img {
+   width: auto;
+   height: 70px;
+   margin-top: -15px;
+}
+
+.text-headerblock h5 {
+   opacity: 0.8;
+}
+
+#main {
+   background-color: #999;
+   height: 800px;
+}
+
+#you {
+   color: linear-gradient(45deg, red, blue);
+
+}
+#setting {
+
+   width: 200px;
+   height: 150px;
+   transform: translate(360deg);
+   transition: 1s inherit;
+}
+
+.setting {
+   background-color: white;
+   box-shadow: 1px 5px 10px 2px rgb(207, 207, 207);
+   height: 350px;
+   margin: 5px;
+}
+
+.crop img {
+   width: 250px;
+   height: 180px;
+   margin-top: -25px;
+}
+
+.crop {
+   margin: 5px;
+   background-color: white;
+   box-shadow: 1px 5px 10px 2px rgb(223, 223, 223);
+   height: 350px;
+}
+
+.rocket {
+   margin-top: 10px;
+   width: 100px;
+   height: 100px;
+}
+
+#rocket {
+   margin: 5px;
+   background-color: rgb(255, 255, 255);
+   box-shadow: 10px 5px 10px 2px rgb(216, 216, 216);
+   height: 350px;
+}
+
+#anim {
+   margin-bottom: 50px;
+   margin-top: 20px;
+   margin-left: 50px;
+}
+#round{
+   width: 20px;
+   background: rgb(202, 182, 255);
+   border-radius: 50%;
+}
+/* Sardor */
