--- a/Slider/style.css
+++ b/Slider/style.css
@@ -403,9 +403,11 @@ background-color: rgb(105, 105, 197);
    margin-top: -300px;
 }
 #fluid{margin-top: 20px;
-   width: 100vw;
-   margin-left: -135px;
-   height: 500px;
+width: 100%;
+height: 500px;
+
+
+
    background: rgb(63,94,251);
 background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 }
@@ -429,9 +431,9 @@ background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100
    cursor: pointer;
    color: rgb(216, 215, 231);
 }
-#Final{ width: 100vw;
+#Final{ width: 100%;
    height: 80px;
-   margin-left: -135px;
+
    background: rgb(238,174,202);
 background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
